syntax = "proto3";

package proto;
option go_package = "go-grpc-example2/unary/calculator/proto";

message divideRequest{
  double varA = 1;
  double varB = 2;
}

message divideResponse{
  double result = 1;
}