syntax = "proto3";

package proto;
option go_package = "go-grpc-example2/unary/calculator/proto";

message multiplyRequest{
  double varA = 1;
  double varB = 2;
}

message multiplyResponse{
  double result = 1;
}